Fix textarea in/valid icon getting left behind when a user resizes the field. cases: normal-top label: nothing: resize height/width, container width fit-content quiet: no resize custom width: only resize height custom height: only resize width custom both: no resize
normal-side label:
nothing: resize height/width, container fit-content
quiet: no resize
custom width: only resize height
custom height: only resize width
custom both: no resize

in form-top label:
nothing: resize height, follow form width
quiet: no resize

in form-side label:
nothing: resize height, follow form width
quiet: no resize

--- a/packages/@adobe/spectrum-css-temp/components/fieldlabel/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/fieldlabel/index.css
@@ -87,7 +87,7 @@ governing permissions and limitations under the License.
 */
 
 .spectrum-Form {
-  /* With labelPosition=side, we override field layout to use a CSS table 
+  /* With labelPosition=side, we override field layout to use a CSS table
    * so that all the labels and fields line up automatically. */
   &.spectrum-Form--positionSide {
     display: table;
@@ -126,5 +126,9 @@ governing permissions and limitations under the License.
       margin-top: var(--spectrum-fieldlabel-margin);
       width: 100%;
     }
+  }
+
+  .spectrum-Form-input {
+    resize: vertical;
   }
 }
